tests/interp/bad/exists-1.ngc
(Expected # reading parameter)
G0 X EXISTS[1]
M2
